--- a/_examples/compression_playground/templates/protobuf.html
+++ b/_examples/compression_playground/templates/protobuf.html
@@ -57,7 +57,9 @@
                     app.appendChild(scoreDisplay);
                 }
 
-                const centrifuge = new Centrifuge(wsEndpoint, {});
+                const centrifuge = new Centrifuge(wsEndpoint, {
+                    debug: true,
+                });
 
                 let subOptions = {
                     since: {},
