--- a/_examples/compression_playground/templates/index.html
+++ b/_examples/compression_playground/templates/index.html
@@ -47,6 +47,9 @@
         <li>
             <a href="/protobuf?protocol=protobuf&payload=json&compression=yes&delta=yes&delay=yes">JSON over Protobuf, with compression, with delta, with delay</a>
         </li>
+        <li>
+            <a href="/protobuf?protocol=protobuf&payload=protobuf&compression=yes&delta=yes&delay=yes">Protobuf over Protobuf, with compression, with delta, with delay</a>
+        </li>
     </ol>
 </div>
 </body>
