use beta centrifuge-js, json over json with delay

--- a/_examples/compression_playground/templates/index.html
+++ b/_examples/compression_playground/templates/index.html
@@ -45,6 +45,9 @@
             <a href="/protobuf?protocol=protobuf&payload=protobuf&compression=yes&delta=yes">Protobuf over Protobuf, with compression, with delta</a>
         </li>
         <li>
+            <a href="/json?protocol=json&payload=json&compression=yes&delta=yes&delay=yes">JSON over JSON, with compression, with delta, with delay</a>
+        </li>
+        <li>
             <a href="/protobuf?protocol=protobuf&payload=json&compression=yes&delta=yes&delay=yes">JSON over Protobuf, with compression, with delta, with delay</a>
         </li>
         <li>
