--- a/_examples/compression_playground/templates/protobuf.html
+++ b/_examples/compression_playground/templates/protobuf.html
@@ -5,7 +5,7 @@
     <title></title>
     <script src="https://cdn.jsdelivr.net/npm/protobufjs@7.X.X/dist/protobuf.js"></script>
     <link rel="stylesheet" href="/static/app.css">
-    <script type="text/javascript" src="https://unpkg.com/centrifuge@5.2.0-beta.1/dist/centrifuge.protobuf.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/centrifuge@5.2.0/dist/centrifuge.protobuf.js"></script>
     <script type="text/javascript">
         window.addEventListener('load', function() {
             const url = new URL(window.location.href);
